Remove retail to make it full region ingestion.

--- a/templates/sotah-server-api/base/configmap.yaml
+++ b/templates/sotah-server-api/base/configmap.yaml
@@ -50,8 +50,7 @@ data:
       ],
       "whitelist": {
         "us": {
-          "classic": ["earthfury"],
-          "retail": ["earthen-ring", "aegwynn"]
+          "classic": ["earthfury"]
         },
         "eu": {
           "classic": [],
